feat(custom-tables): Add custom table import requirements specification
- Add detailed requirements document for custom table import feature
- Define user stories and acceptance criteria for table discovery
- Specify validation rules for custom JSON oracle tables
- Outline requirements for table integration with Oracle View
- Create comprehensive specification for custom table management
- Establish guidelines for table organization and user experience
This specification provides a clear roadmap for implementing custom table import functionality in the Mythic GME plugin.

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "mythic-gme-plugin",
+	"name": "Mythic GME Oracles",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "A comprehensive Mythic GME v2 oracle plugin for solo RPG play. Roll on Fate Charts, Event Meaning tables, and descriptors directly from the sidebar. Insert results into your notes with one click.",
+	"author": "",
+	"authorUrl": "",
+	"fundingUrl": "",
 	"isDesktopOnly": false
 }
